--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,17 @@
+[workspace]
+members = [".", "ivi-client", "ivi-cli"]
+
+[workspace.dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
+libc = "0.2"
+mio = { version = "0.8", features = ["os-poll", "net"] }
+jlogger-tracing = "0.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+lazy_static = "1.4"
+
 [package]
 name = "weston-ivi-controller"
 version = "0.1.0"
@@ -5,18 +19,18 @@ edition = "2021"
 license = "MIT"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-libc = "0.2"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-jlogger-tracing = "0.1"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-thiserror = "1.0"
-mio = { version = "0.8", features = ["os-poll", "net"] }
-lazy_static = "1.4"
+libc = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+jlogger-tracing = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+thiserror = { workspace = true }
+mio = { workspace = true }
+lazy_static = { workspace = true }
 
 [build-dependencies]
 bindgen = "0.69"
